src/iquitsupportit/static/css/style.css
.error {
    color: rgb(202, 60, 60);
}

body {
    background: url('/static/img/binding_dark.png');
}

hr {
  border: 1px solid #999;
  width: 50%;
  margin-bottom: 20px;
}

#content {
    max-width: 1024px;
    margin: 0 auto;
    background: white;
    padding-top: 20px;
    padding-bottom: 20px;
}

.messages {
    list-style-type: none;
    margin: 0;
    padding: 0;
    margin-bottom: 20px;
}

.messages li {
    padding: 10px;
}

.messages .success{
    color: white;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    background: rgb(28, 184, 65); /* this is a green */
}

#footer {
    margin-top: 40px;
    font-style: italic;
    font-size: 0.8em;
    text-align: center;
}

/* HELLO BOX */
.hello-box {
    width: 300px;
    height: 200px;
    border-radius: 25px;
    background: #E44436;
    margin: 0 auto;
    margin-bottom: 30px;
    color: white;
    text-align: center;
}

.hello-box h1, .hello-box h2 {
    margin: 0;
    font-family: monospace;
}

.hello-box h1{
    font-size: 2.6em;
    text-transform: uppercase;
    letter-spacing: 0.3em;
    font-weight: 900;
}

.hello-box h2{
    margin-top: -8px;
    margin-bottom: 5px;
    text-transform: lowercase;
}

.hello-box .name {
    height: 80px;
    width: 100%;
    position: relative;
    background: #FDFDFD;
    color: black;
    padding-top: 30px;
    font-size: 2.7em;
    font-weight: bold;
    font-family:cursive;
}

/* END HELLO BOX */

/* SINCE BOX */
#since-box {
    text-align: center;
}
#since-box #since-message {
    font-size: 2.5em;
    font-weight: bold;
}
#clock {
    display: inline-block;
    width: inherit;
    margin: 35px 0 15px 0;
}
#charity-box {
    font-size: 1.8em;
}
/* END SINCE BOX*/

/* BENEFICIARY BOX */
#beneficiary-box {
    margin-top: 20px;
    text-align: center;
    font-size: 1.5em;
    background: url("/static/img/shinda.jpg");
    color: #FFF;
    font-weight: bold;
    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
}
#beneficiary {
    padding: 35px 0 25px 0;
    font-size: 2em;
}

#beneficiary a {
    text-decoration: none;
    color: #FFF;
}
#beneficiary a:hover{
   text-decoration: underline;
}
#total-amount {
    padding: 25px 0 25px 0;
    font-size: 2.5em;
}
#copyright {
    text-align: left;
    font-size: 0.6em;
    font-weight: normal;
}
/* END BENEFICIARY BOX*/

/* TESTIMONY BOX */
#testimony-box {
    margin: 40px 40px 40px 40px;
    text-align: justify;
    font-family: "Georgia", serif;
    color: #666;
    font-style: italic;
    line-height: 1.8;
    border-left: 5px solid #ddd;
    padding-left: 1.5em;
}
/* END TESTIMONY BOX*/

/* MEDIA BOX */
#media-box {
    margin: 40px auto;
    width: 360px;
}
/* END MEDIA BOX*/

/* PLEDGE BOX */
#pledge-box {
    margin: 0 20px;
}
#donate-button {
    text-align: center;
}
#pledge-box input[type=submit] {
    margin: 15px 0;
    padding: 10px;
    font-weight: bold;
}
#pledge-disclaimer {
    font-style: italic;
    font-size: 0.8em;
}
#pledge-loading {
    height: 32px;
    width: 32px;
    margin: 0 auto;
    background: url('/static/img/loading.gif');
    display: none;
}
/* END PLEDGE BOX*/

/* DONATIONS BOX */
#donations-box {
    margin: 0 20px;
}
.donation-value {
    font-size: 1.8em;
    font-weight: bold;
    margin-top:20px;
    margin-bottom: 25px;
    color: #6E6E6E;
    padding-right:100px;
    text-align: right;
}
/* END DONATIONS BOX*/

/* SHARE BOX */
#info-box {
    margin: 0 20px;
}
#help {
    font-size: 1.3em;
    font-style: italic;
    margin-bottom: 20px;
    text-align: center;
}
#logo {
    text-align: center;
    margin-bottom:20px;
}
#spread {
    font-size: 1.8em;
    text-align: center;
    margin-bottom: 20px;
    font-weight: bold;
}

#share-buttons {
    text-align: center;
}
/* END SHARE BOX*/

